@startuml
'https://plantuml.com/class-diagram

abstract class Employee{
-firstName : String
-lastName : String
- SSN : String
+getFirstName():String
+setFirstName(firstName: String):void
+getLastName(): String
+setLastName(lastName : String):void
+getSSN():String
+setSSN(SSN : String):void
}
class SalariesEmployee{
-weeklySalary : Integer
+getWeeklySalary(): Integer
+setWeeklySalary(weeklySalary:Integer):void
}
class HourlyEmployee{
-wage : int
-hours : int
+getWage():int
+setWage(wage:int):void
}

class CommissionEmployee{
-commissionRate : float
-grossSale : Integer
+getCommissionRate():float
+setCommissionRate(commissionRate:float):void
+getGrossSales():Integer
+setGrossSale(grossSale:Integer):void
}

class BaseEmployee{
-baseSalary:Integer
+getBaseSalary():Integer
+setBaseSalary(baseSalary:Integer)
}

Employee <|-- SalariesEmployee
Employee <|-- BaseEmployee
Employee <|-- HourlyEmployee
Employee <|-- CommissionEmployee




@enduml